<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="220dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:id="@+id/text"
        android:padding="10dp"
        style="@style/semi"
        android:text="@string/update_password"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_below="@id/text"
        android:id="@+id/old_psd"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:padding="10dp"
        android:password="true"
        android:hint="@string/old_psd"
        style="@style/regular"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/rounded_border"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_below="@id/old_psd"
        android:id="@+id/new_psd"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:padding="10dp"
        android:password="true"
        android:hint="@string/new_psd"
        style="@style/regular"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/rounded_border"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_psd"
        android:gravity="center"
        android:layout_marginTop="@dimen/dim20"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/done"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/success"
            android:foreground="@drawable/ripple_effect" />

        <ImageButton
            android:id="@+id/cancel"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/error"
            android:foreground="@drawable/ripple_effect" />

    </RelativeLayout>
</RelativeLayout>