<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.easyschools.teacher.AddMaterial">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dim10"
        android:text="@string/add_material"
        android:textAllCaps="false"
        android:textSize="20sp"
        style="@style/semi"
        android:textColor="@color/colorPrimary"
        />

    <ScrollView
        android:layout_marginTop="@dimen/dim10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
>
<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dim5">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/m"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        />
    <Spinner
        android:id="@+id/material_create_subjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dim45"
        android:layout_marginStart="@dimen/dim45"
        android:layout_below="@id/m"
        android:layout_marginTop="@dimen/dim10"
        android:background="@drawable/spinner" />

    <RelativeLayout
        android:id="@+id/week_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/material_create_subjects"
        android:layout_marginEnd="@dimen/dim10"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/dim20"
        android:background="@drawable/border">

        <Spinner
            android:id="@+id/week_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/dim10" />
    </RelativeLayout>
    <RelativeLayout
                android:id="@+id/name_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim10"
                android:layout_marginEnd="@dimen/dim10"
                android:layout_marginStart="@dimen/dim10"
                android:layout_marginTop="@dimen/dim10"
        android:background="@drawable/border"
        android:layout_below="@id/week_layout"
               >

                <EditText
                    android:id="@+id/material_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/material_title"
                    android:maxLines="1"
                    android:padding="@dimen/dim10"
                    style="@style/regular"
                    android:textColor="@color/colorPrimary" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/desc_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_card"
                android:layout_marginBottom="@dimen/dim10"
                android:layout_marginEnd="@dimen/dim10"
                android:layout_marginStart="@dimen/dim10"
                android:layout_marginTop="@dimen/dim10"
                android:background="@drawable/border">

                <EditText
                    android:id="@+id/material_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/description"
                    android:maxLines="1"
                    android:padding="@dimen/dim10"
                    style="@style/regular"
                    android:textColor="@color/colorPrimary" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/questions_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/desc_card"
                android:layout_marginBottom="@dimen/dim10"
                android:layout_marginEnd="@dimen/dim10"
                android:layout_marginStart="@dimen/dim10"
                android:layout_marginTop="@dimen/dim10"
                android:background="@drawable/border">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/dim15">

                    <ImageButton
                        android:id="@+id/upload_material_files"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dim10"
                        android:background="@drawable/ic_upload"
                        android:foreground="@drawable/ripple_effect" />

                    <TextView
                        android:id="@+id/questions_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dim20"
                        android:text="@string/upload_files"
                        style="@style/regular"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/questions_card"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/create_material"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dim30"
                    android:background="@drawable/rounded_btn"
                    android:foreground="@drawable/ripple_effect"
                    android:text="@string/done"
                    style="@style/regular"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />


            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>

